<resources>
    <string name="app_name" translatable="false">Zip Extractor - UnZIP, UnRAR</string>

    <string name="save_name" >Zip_Extractor</string>
    <string name="internal_storage" translatable="false">Internal Storage</string>
    <string name="close" translatable="false">Close</string>
    <string name="protect_with_password" translatable="false">Protect With Password?</string>
    <string name="compress_files" translatable="false">Compress</string>
    <string name="zip" translatable="false">Zip</string>
    <string name="format" translatable="false">Archive Format</string>
    <string name="seven_zip" translatable="false">7z</string>
    <string name="tar" translatable="false">Tar</string>
    <string name="folder_name" translatable="false">Folder Name</string>
    <string name="file_name" translatable="false">File Name</string>
    <string name="extract" translatable="false">Extract</string>
    <string name="extract_to_extracted" translatable="false">Extract to..../Extracted</string>
    <string name="share" translatable="false">Share</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="rename" translatable="false">Rename</string>
    <string name="done" translatable="false">Done</string>
    <string name="enter_file_name" translatable="false">Enter File Name</string>
    <string name="password" translatable="false">Password</string>
    <string name="enter_password" translatable="false">Enter PassWord</string>

    <string name="add" translatable="false">Add</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="share_app" translatable="false">Share App</string>
    <string name="rate_app" translatable="false">Rate App</string>
    <string name="language" translatable="false">Language</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_wait" translatable="false">Please Wait...</string>
    <string name="do_not_off_this_screen_n_this_action_cannot_be_undone" translatable="false">Do not off this screen\n This Action cannot be undone</string>


    <string name="view" translatable="false">View</string>
    <string name="run_in_background" translatable="false">Run in Background</string>
    <string name="open_file" translatable="false">Open File</string>
    <string name="go_to_home" translatable="false">Go To Home</string>
    <string name="size" translatable="false">Size</string>
    <string name="date" translatable="false">Date</string>
    <string name="name" translatable="false">Name</string>
    <string name="continues" translatable="false">Continue</string>
    <string name="complete" translatable="false">Complete</string>
    <string name="file_delete" translatable="false">File Deleted Successfully.</string>
    <string name="file_complete_extracted" translatable="false">You\'ve Completely Extracted your File!</string>
    <string name="file_complete_compressed" translatable="false">You\'ve Completely Compressed your File, Share file now!</string>
    <string name="category" translatable="false">Category</string>
    <string name="images" translatable="false">Images</string>
    <string name="videos" translatable="false">Videos</string>
    <string name="download" translatable="false">Download</string>
    <string name="archive" translatable="false">Archive</string>
    <string name="please_select_only_one" translatable="false">Please Select only one item</string>
    <string name="this_is_not_archive_file" translatable="false">This is not Archive file</string>
    <string name="please_enter_name" translatable="false">Please Enter Name</string>
    <string name="failed_to_extract">Failed to extract the file.</string>
    <string name="wrong_password_please_re_enter" translatable="false">Wrong password Please re-enter.</string>
    <string name="file_is_protected_please_enter_a_password" translatable="false">File is protected. Please enter a password.</string>
    <string name="extraction_started" translatable="false">Extraction started</string>
    <string name="password_not_entered_please_enter_the_password" translatable="false">Password not entered. Please enter the password.</string>
    <string name="please_enter_password" translatable="false"> Please Enter PassWord</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="are_you_sure_to_want_to_exit_app" translatable="false">Are You Sure to Want to Exit App ?</string>
    <string name="processing" translatable="false">Processing</string>
    <string name="please_select_a_language" translatable="false">Please select a language</string>
    <string name="audios">Audios</string>
    <string name="documents">Documents</string>
    <string name="apks">Apks</string>
    <string name="selected" translatable="false">Selected</string>
    <string name="permissiontxt" translatable="false">Zip Extractor needs permission to access your files. Allow access to your files so Zip Extractor can help you quickly manage archive files and more.</string>
    <string name="allow" translatable="false">Allow</string>
    <string name="loading_ads">Loading Ads ...</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_str">Check your internet connection and try again</string>
    <string name="try_again">Try Again</string>

</resources>