<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="1dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/file_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/view_color" />


            <TextView
                android:id="@+id/file_extract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/extract"
                android:visibility="gone"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <TextView
                android:id="@+id/file_exractto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/extract_to_extracted"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <TextView
                android:id="@+id/file_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/view"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />


            <TextView
                android:id="@+id/file_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/view_color" />


            <TextView
                android:id="@+id/file_rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/rename"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <TextView
                android:id="@+id/file_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/grey"
                android:textSize="18sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>