<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/compress_files"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="15dp"
                    android:src="@drawable/ic_close_circle" />

            </LinearLayout>

            <TextView
                android:id="@+id/item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/file_name"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edit"
                android:hint="@string/folder_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/format"
                android:textColor="@color/text_color"
                android:textSize="16sp" />


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="3dp"
                    android:text="@string/zip"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/sevenz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="3dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/seven_zip"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/tar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="3dp"
                    android:text="@string/tar"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </RadioGroup>

            <RelativeLayout
                android:id="@+id/use_password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_toStartOf="@+id/use_password"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/protect_with_password"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/use_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:scaleX="1.2"
                    android:scaleY="1.2" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/edttxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textColorHint="#808080" />

                <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right|center_vertical|center_horizontal|center"
                    android:src="@drawable/effect_password" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/compress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:text="@string/compress_files"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>